Few more properties added. Xaml removed and cs used to make BoxTemplate internal

--- a/src/PINView/PINView.Maui.csproj
+++ b/src/PINView/PINView.Maui.csproj
@@ -29,6 +29,8 @@
 	  <Folder Include="Platforms\Windows\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Compile Remove="BoxTemplate.cs" />
+	  <Compile Update="BoxTemplate.cs">
+	    <DependentUpon>%(Filename)</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 </Project>
