--- a/src/PINView/PINView.Maui.csproj
+++ b/src/PINView/PINView.Maui.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>
+		<TargetFrameworks>net7.0;net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -32,12 +32,14 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="Converters\" />
+	  <None Remove="Platforms\Android\Handlers\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Converters\" />
 	  <Folder Include="Platforms\Android\" />
 	  <Folder Include="Platforms\MacCatalyst\" />
 	  <Folder Include="Platforms\Windows\" />
+	  <Folder Include="Platforms\Android\Handlers\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <None Include="..\..\arts\Package-Icon.png">
